<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity" android:id="@+id/activity_home">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/homeHeaderContainerCnstLyt" android:background="@color/colorPrimary">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_otherapps_24dp"
                android:id="@+id/imageView5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_contact_phone_24dp"
                android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                android:textColor="@color/colorWhite"/>
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorLightestGrey"
            app:layout_constraintTop_toBottomOf="@+id/homeHeaderContainerCnstLyt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/homeTabButtonsContainerLnLyt">
        <com.nyanx.max.maxbankieren.customViews.BadgedButton
                android:id="@+id/accountsTabBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1"
                app:badgeVisibility="false"
                app:buttonIconUnselected="@drawable/ic_accounts_black_24dp"
                app:text="@string/accounts"
                app:textColorSelected="@color/colorWhite"
                app:textColorUnselected="@color/colorGrey"/>
        <com.nyanx.max.maxbankieren.customViews.BadgedButton
                android:id="@+id/selfServiceTabBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1"
                app:badgeVisibility="false"
                app:buttonIconUnselected="@drawable/ic_selfservice_black_24dp"
                app:text="@string/self_service"
                app:textColorSelected="@color/colorWhite"
                app:textColorUnselected="@color/colorGrey"/>
        <com.nyanx.max.maxbankieren.customViews.BadgedButton
                android:id="@+id/bankMailTabBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1"
                app:badgeVisibility="true"
                app:buttonIconUnselected="@drawable/ic_bankmail_black_24dp"
                app:text="@string/bank_mail"
                app:textColorSelected="@color/colorWhite"
                app:textColorUnselected="@color/colorGrey"/>
        <com.nyanx.max.maxbankieren.customViews.BadgedButton
                android:id="@+id/settingsTabBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1"
                app:badgeVisibility="false"
                app:buttonIconUnselected="@drawable/ic_settings_black_24dp"
                app:text="@string/settings"
                app:textColorSelected="@color/colorWhite"
                app:textColorUnselected="@color/colorGrey"/>
        <com.nyanx.max.maxbankieren.customViews.BadgedButton
                android:id="@+id/taskListTabBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1"
                app:badgeVisibility="false"
                app:buttonIconUnselected="@drawable/ic_tasklist_black_24dp"
                app:text="@string/task_list"
                app:textColorSelected="@color/colorWhite"
                app:textColorUnselected="@color/colorGrey"/>
    </LinearLayout>
    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/homeTabButtonsContainerLnLyt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/homeTabBodyContainerFrmLyt">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>