<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.AccountsFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/accountsListRclrVw"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorWhite" android:elevation="2dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/accountsListRclrVw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider" app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:id="@+id/constraintLayout4"
                android:background="@color/colorWhite" android:elevation="1dp">

            <ImageView
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/imageView8" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/exp_break_down"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView18" app:layout_constraintStart_toEndOf="@+id/imageView8"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                android:background="@color/colorGrey">

            <TextView
                    android:text="@string/total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorWhite"/>
            <TextView
                    android:text="$"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountsTotalCurrencySymbolTxtVw"
                    app:layout_constraintEnd_toStartOf="@+id/accountsTotalIntegerPartTxtVw"
                    android:textColor="@color/colorWhite" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="16sp" android:textStyle="bold"/>
            <TextView
                    android:text="10.252"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountsTotalIntegerPartTxtVw"
                    app:layout_constraintEnd_toStartOf="@+id/accountsTotalDecimalSymbolTxtVw"
                    android:textColor="@color/colorWhite" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"/>
            <TextView
                    android:text=","
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountsTotalDecimalSymbolTxtVw"
                    app:layout_constraintEnd_toStartOf="@+id/accountsTotalFractionPartTxtVw"
                    android:textColor="@color/colorWhite" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"/>
            <TextView
                    android:text="99"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accountsTotalFractionPartTxtVw" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:textColor="@color/colorWhite"
                    app:layout_constraintTop_toTopOf="@+id/accountsTotalIntegerPartTxtVw" android:textSize="12sp"
                    android:textStyle="bold"/>
            <ImageView
                    android:src="@drawable/ic_info_outline_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7" app:layout_constraintStart_toEndOf="@+id/textView13"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/transfer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/accountsTransferBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAllCaps="false" android:background="@color/colorCallToActionButton"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/accountsTransferBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>